# Arithmetic-Dragons

./: App.cpp  App.h  CMakeLists.txt  Game.cpp  Game.h  README.md  main.cpp
textures/: dialog.aseprite
textures/dragons/: black.aseprite  green.aseprite  red.aseprite
textures/legacy/: cat.aseprite
